<resources>
    <string name="app_name">CareemMovies</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="default_movie_title">Movie Title</string>
    <string name="default_release_date">2017 07 11</string>
    <string name="overview">Overview</string>
    <string name="release_date_text">Release date:</string>
    <string name="show_more">Show more</string>
    <string name="default_overview">A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground \\\"fight clubs\\\" forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion.</string>
    <string name="default_vote_text">6.7</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string translatable="false" name="server_api_key">849b168e64c622598662384909fc2880</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="retry">Retry</string>
    <string name="filter_by_date">Filter By Date</string>
    <string name="filter_by_date_hint">Filter by date (e.g 1990-10-11)</string>
</resources>
