<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/detail_cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="3dp"
        card_view:cardUseCompatPadding="true"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/genres_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="17dp"
                android:text="@string/overview"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/vote_rb"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:numStars="5"
                    android:stepSize="0.5"/>

                <TextView
                    android:id="@+id/vote_tv"
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="2"
                    android:gravity="top"
                    android:maxLength="7"
                    android:text="@string/default_vote_text" />

                <TextView
                    android:id="@+id/released_tv"
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="top"
                    android:maxLength="15"
                    android:text="@string/default_vote_text" />

            </LinearLayout>


            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:padding="15dp"
                android:text="@string/default_overview"
                android:textColor="#3F3F3F"
                android:textSize="15sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="#EEEEEE" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date_text"
                        android:textColor="#CCCDD1"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/release_date_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:maxLength="10"
                        android:text="@string/default_release_date"
                        android:textColor="#CCCDD1"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

       <include layout="@layout/loading_fallback_layout"/>

    </LinearLayout>

</RelativeLayout>